Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2218

QMenu Check Box Disappears When Using Stylesheets

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.6.0
    • 4.3.4
    • Widgets: Style Sheets
    • None
    • 5f9187991c25c3bbe812b788251678f0ab1116a3

      QMenu::indicator {
      background-color: black;
      color: white
      }

      This causes the check box square to not appear in a QMenu.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            mch Jervey Kong
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes