Wrong styling of checkable menu items.

When using style sheets, the fallback for the menu item is
QWindowsStyle. However, QWindowsStyle doesn't draw anything when the item is
not checked.

We now mimick what QWindowsStyle would draw in
QStyleSheetStyle::drawControl().

The "static const int windows*" variables in qwindowsstyle.cpp
have been moved into QWindowsStylePrivate to make them accessible to
QStyleSheetStyle.

Reviewed-by: Olivier
Task-number: QTBUG-2218
Task-number: QTBUG-2217
Task-number: QTBUG-3479